working on header and sidebar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wbuilder</title>
+  <!-- FAVICON ICON -->
   <link rel="shortcut icon" href="favicon.svg" type="image/svg">
+  <!-- BOOTSTRAP CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+  <!-- WBUILDER CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -24,7 +27,7 @@
   </div>
   <!--========== PRELOADER-END ============-->
   
-  
+
 
 
   <!--========== BOOTSTRAP JS ============-->
