notification dropdown completed

--- a/index.html
+++ b/index.html
@@ -26,8 +26,203 @@
     </div>
   </div>
   <!--========== PRELOADER-END ============-->
-  
 
+  <!--========== HEADER-START ============-->
+  <header class="header">
+    <div class="container-fluid px-4">
+      <nav class="header-nav">
+
+        <ul class="headerlist">
+          <li class="headerlist-item">
+            <a href="#" class="notify-link">
+              <svg width="24" height="26" viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.7695 13.1453C19.039 12.2923 18.7071 11.5531 18.7071 10.2972V9.87013C18.7071 8.23354 18.3304 7.17907 17.5115 6.12459C16.2493 4.48699 14.1244 3.5 12.0442 3.5H11.9558C9.91935 3.5 7.86106 4.44167 6.577 6.0128C5.71333 7.08842 5.29293 8.18822 5.29293 9.87013V10.2972C5.29293 11.5531 4.98284 12.2923 4.23049 13.1453C3.67691 13.7738 3.5 14.5815 3.5 15.4557C3.5 16.3309 3.78723 17.1598 4.36367 17.8336C5.11602 18.6413 6.17846 19.1569 7.26375 19.2466C8.83505 19.4258 10.4063 19.4933 12.0005 19.4933C13.5937 19.4933 15.165 19.3805 16.7372 19.2466C17.8215 19.1569 18.884 18.6413 19.6363 17.8336C20.2118 17.1598 20.5 16.3309 20.5 15.4557C20.5 14.5815 20.3231 13.7738 19.7695 13.1453Z" fill="#8A92A6"/>
+                <path opacity="0.4" d="M14.0088 20.7284C13.5088 20.6216 10.4627 20.6216 9.96275 20.7284C9.53539 20.8271 9.07324 21.0567 9.07324 21.5603C9.09809 22.0407 9.37935 22.4647 9.76895 22.7336L9.76795 22.7346C10.2718 23.1274 10.8632 23.3771 11.4824 23.4668C11.8123 23.5121 12.1482 23.5101 12.4901 23.4668C13.1083 23.3771 13.6997 23.1274 14.2036 22.7346L14.2026 22.7336C14.5922 22.4647 14.8734 22.0407 14.8983 21.5603C14.8983 21.0567 14.4361 20.8271 14.0088 20.7284Z" fill="#8A92A6"/>
+                <rect x="12.5" y="0.5" width="7" height="7" rx="3.5" fill="#FC5A5A"/>
+                <rect x="12.5" y="0.5" width="7" height="7" rx="3.5" stroke="white"/>
+              </svg>
+            </a>
+
+            <!-- NOTIFICATION DROPDOWN START -->
+            <div class="notification">
+              <!-- NOTIFICATIONS -->
+              <ul class="notificationlist">
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+                
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+                
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+
+                <li class="notificationlist-item">
+                  <a href="#" class="notificationlist-link">
+                    <figure class="notification-thumbnail">
+                      <img src="assets/images/icons/icon-1.svg" alt="notification-thumbnail">
+                    </figure>
+
+                    <div class="details">
+                      <h6 class="title">Just a random notification text</h6>
+                      <p class="date">1 day ago</p>
+                    </div>
+                  </a>
+                </li>
+              </ul>
+
+              <!-- ALL NOTIFICATIONS -->
+              <div class="notification-all">
+                <a href="#" class="link">See all notification</a>
+              </div>
+            </div>
+          </li>
+
+          <li class="headerlist-item">
+            <a href="#" class="user-link">
+              <figure class="user-thumbnail">
+                <img src="assets/images/avatar/avatar.svg" alt="default-user">
+              </figure>
+
+              <div class="detail">
+                <h6 class="name">Austin Robertson</h6>
+                <p class="designation">Marketing Administrator</p>
+              </div>
+            </a>
+
+            <!-- USER DROPDOWN START -->
+            <div class="user">
+              <ul class="userlist">
+                <li class="userlist-item">
+                  <a href="#" class="userlist-link">Profile</a>
+                </li>
+                <li class="userlist-item">
+                  <a href="#" class="userlist-link">Privacy Settings</a>
+                </li>
+                <li class="userlist-item">
+                  <a href="#" class="userlist-link">Logout</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!--========== HEADER-END ==============-->
+
+  <!--========== SIDEBAR-START ============-->
+
+  <!--========== SIDEBAR-END ==============-->
+  
+  
 
 
   <!--========== BOOTSTRAP JS ============-->
