--- a/index.html
+++ b/index.html
@@ -701,14 +701,18 @@
   <!--========== HEADER-END ==============-->
 
   <!--========== SIDEBAR-START ============-->
+  
   <aside class="desktopsidebar">
     <div class="desktopsidebar-header">
+
       <a href="index.html" class="logo">
-        <img src="assets/images/logo/logo.svg" alt="logo">
+        <img src="assets/images/logo/logo.svg" alt="logo" class="firstLogoImage" >
+        <img src="Group 33618.svg" alt="" class="imageC">
       </a>
 
-      <button class="btn-toggle">
-        <svg width="39" height="38" viewBox="0 0 39 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+      
+      <button class="btn-toggle" id="btn_toggles">
+        <svg  width="39" height="38" viewBox="0 0 39 38" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g filter="url(#toggleicon)">
             <rect x="34.126" y="2" width="30" height="30" rx="15" transform="rotate(90 34.126 2)" fill="#4A66ED"/>
             <path d="M13.3135 17.2053L24.5635 17.2053" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -727,11 +731,12 @@
           </defs>
         </svg>
       </button>
+
     </div>
 
     <div class="desktopmenu">
       <a href="#" class="menulink">
-        <span class="icon">
+        <span class="icon ">
           <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path opacity="0.4" d="M16.9408 2H20.3126C21.709 2 22.8404 3.14585 22.8404 4.55996V7.97452C22.8404 9.38864 21.709 10.5345 20.3126 10.5345H16.9408C15.5445 10.5345 14.413 9.38864 14.413 7.97452V4.55996C14.413 3.14585 15.5445 2 16.9408 2Z" fill="#A4B4F2"/>
             <path fill-rule="evenodd" clip-rule="evenodd" d="M5.45184 2H8.82358C10.22 2 11.3514 3.14585 11.3514 4.55996V7.97452C11.3514 9.38864 10.22 10.5345 8.82358 10.5345H5.45184C4.05547 10.5345 2.92398 9.38864 2.92398 7.97452V4.55996C2.92398 3.14585 4.05547 2 5.45184 2ZM5.45184 13.4655H8.82358C10.22 13.4655 11.3514 14.6114 11.3514 16.0255V19.44C11.3514 20.8532 10.22 22 8.82358 22H5.45184C4.05547 22 2.92398 20.8532 2.92398 19.44V16.0255C2.92398 14.6114 4.05547 13.4655 5.45184 13.4655ZM20.3121 13.4655H16.9403C15.5439 13.4655 14.4125 14.6114 14.4125 16.0255V19.44C14.4125 20.8532 15.5439 22 16.9403 22H20.3121C21.7084 22 22.84 20.8532 22.84 19.44V16.0255C22.84 14.6114 21.7084 13.4655 20.3121 13.4655Z" fill="#4A66ED"/>
@@ -1101,9 +1106,8 @@
               <rect width="24" height="24" fill="white"/>
               </clipPath>
               </defs>
-              </svg>
-              
-            </svg>
+              </svg>              
+            <!-- </svg> -->
           </span>
           <span class="text">Marketing</span>
         </a>
@@ -1178,13 +1182,236 @@
   </aside>
   <!--========== SIDEBAR-END ==============-->
   
+  <!--========== DATATable-START ============-->
   
+  <div class="table-responsive">
+    <div class="captions">
+      Data Table
+    </div>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th scope="col" class="minWidth">#</th>
+      <div class="">
+        <th scope="col" class="uName">
+          User Name<img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+        </th>
+      </div>
+
+
+          <th scope="col">
+            User Email <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col">
+            Table <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col">
+            Details <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col">
+            Age <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col">
+            Balance <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col">
+            Header <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+          <th scope="col" class="tbHeader">
+            Header <img src="assets/images/icons/Frame.svg" alt="" class="float-end" />
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row" class="serialNumber minWidth">1</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>@mdo</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td>@twitter</td>
+        </tr>
+        <tr>
+          <th scope="row" class="serialNumber minWidth">2</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+        <tr>
+          <th scope="row" class="serialNumber minWidth">3</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">3</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">4</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">5</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">6</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">7</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">8</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">8</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">10</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">11</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">12</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">13</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+
+        <tr>
+          <th scope="row" class="serialNumber minWidth">14</th>
+          <td>test name</td>
+          <td>testmail@gmail.com</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+          <td>random text</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <!--========== DATATable-END ============-->
+
 
 
   <!--========== BOOTSTRAP JS ============-->
   <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
   <!--========== PRELOADER JS ============-->
   <script src="assets/js/preloader/loader.js"></script>
-
+<script src="index.js"></script>
 </body>
 </html>
